test/corpus/gnu_extensions.txt
================================================================================
GNU attributes on declarations, typedefs, and enums
================================================================================

int g __attribute__((aligned(16))) = 0;
int h __attribute__((packed));
void free_fn(int *p) {}
int f(void) {
  int g __attribute__((cleanup(free_fn))) = 0;
  return g;
}
typedef int __attribute__((vector_size(16))) v4si;
typedef int __attribute__((may_alias)) alias_int;
enum E __attribute__((packed)) { A, B, C };
enum F { D } __attribute__((packed));

--------------------------------------------------------------------------------

(translation_unit
  (declaration
    (primitive_type)
    (init_declarator
      (identifier)
      (attribute_specifier
        (argument_list
          (call_expression
            (identifier)
            (argument_list
              (number_literal)))))
      (number_literal)))
  (declaration
    (primitive_type)
    (identifier)
    (attribute_specifier
      (argument_list
        (identifier))))
  (function_definition
    (primitive_type)
    (function_declarator
      (identifier)
      (parameter_list
        (parameter_declaration
          (primitive_type)
          (pointer_declarator
            (identifier)))))
    (compound_statement))
  (function_definition
    (primitive_type)
    (function_declarator
      (identifier)
      (parameter_list
        (parameter_declaration
          (primitive_type))))
    (compound_statement
      (declaration
        (primitive_type)
        (init_declarator
          (identifier)
          (attribute_specifier
            (argument_list
              (call_expression
                (identifier)
                (argument_list
                  (identifier)))))
          (number_literal)))
      (return_statement
        (identifier))))
  (type_definition
    (primitive_type)
    (attribute_specifier
      (argument_list
        (call_expression
          (identifier)
          (argument_list
            (number_literal)))))
    (type_identifier))
  (type_definition
    (primitive_type)
    (attribute_specifier
      (argument_list
        (identifier)))
    (type_identifier))
  (enum_specifier
    (type_identifier)
    (attribute_specifier
      (argument_list
        (identifier)))
    (enumerator_list
      (enumerator
        (identifier))
      (enumerator
        (identifier))
      (enumerator
        (identifier))))
  (enum_specifier
    (type_identifier)
    (enumerator_list
      (enumerator
        (identifier)))
    (attribute_specifier
      (argument_list
        (identifier)))))

================================================================================
GNU label attributes and case ranges
================================================================================

int f(int x) {
  goto L;
  L: __attribute__((cold));
  switch (x) {
    case 1 ... 5: return 1;
    default: return 0;
  }
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    (primitive_type)
    (function_declarator
      (identifier)
      (parameter_list
        (parameter_declaration
          (primitive_type)
          (identifier))))
    (compound_statement
      (goto_statement
        (statement_identifier))
      (labeled_statement
        (statement_identifier)
        (attribute_specifier
          (argument_list
            (identifier)))
        (expression_statement))
      (switch_statement
        (parenthesized_expression
          (identifier))
        (compound_statement
          (case_statement
            (number_literal)
            (number_literal)
            (return_statement
              (number_literal)))
          (case_statement
            (return_statement
              (number_literal))))))))

================================================================================
GNU computed goto
================================================================================

int f(void) {
  void *p = &&L;
  goto *p;
  L: return 0;
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    (primitive_type)
    (function_declarator
      (identifier)
      (parameter_list
        (parameter_declaration
          (primitive_type))))
    (compound_statement
      (declaration
        (primitive_type)
        (init_declarator
          (pointer_declarator
            (identifier))
          (unary_expression
            (statement_identifier))))
      (goto_statement
        (identifier))
      (labeled_statement
        (statement_identifier)
        (return_statement
          (number_literal))))))
